[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-evite-plus"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "atinzad"

[tool.flwr.app.components]
serverapp = "fl_evite_plus.server_app:app"
clientapp = "fl_evite_plus.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
penalty = "l2"
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
